# ToolBox

./: .gitignore  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  README.md  ToolBox.pro  ToolBox.qtvscr  ToolBox.sln  ToolBox.vcxproj  ToolBox.vcxproj.filters  bezier.cpp  bezier.h  bezier_label.cpp  bezier_label.h  bleuart.cpp  bleuart.h  commands.cpp  commands.h  datatypes.h  digitalfiltering.cpp  digitalfiltering.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mygraphics.cpp  mygraphics.h  object_script.tool_box_1.04.Debug  object_script.tool_box_1.04.Release  packet.cpp  packet.h  res.qrc  res_fw.qrc  spinboxDelegate.cpp  spinboxDelegate.h  tcpserversimple.cpp  tcpserversimple.h  tool_box_1.04_resource.rc  tool_box_1.53_resource.rc  (+21 more)
docs/: Doxyfile
pages/: mychart.cpp  mychart.h  mychart.ui  pageconnection.cpp  pageconnection.h  pageconnection.ui  pagedataanalysis.cpp  pagedataanalysis.h  pagedataanalysis.ui  pagedebugprint.cpp  pagedebugprint.h  pagefirmware.cpp  pagefirmware.h  pageimu.cpp  pageimu.h  pageloganalysis.h  pagenone.cpp  pagenone.h  pagenone.ui  pageomniwheel.cpp  pageomniwheel.h  pageomniwheel.ui  pagepath.cpp  pagepath.h  pagepath.ui  pages.pri  pageserialanalysis.cpp  pageserialanalysis.h  pageserialanalysis.ui  pagesettings.cpp  pagesettings.h  pagevreprudderbase.cpp  pagevreprudderbase.h  pagevreprudderbase.ui  pagewelcome.cpp  pagewelcome.h  pagewelcome.ui  txtdialog.cpp  txtdialog.h  txtdialog.ui
res/: CHANGELOG
res/language/: lang_Chinese.qm  lang_Chinese.ts  lang_English.ts
time_optimizer/: mosek.h  timeAllocator.h  time_optimizer.cpp  time_optimizer.h  time_optimizer.pri  traj_poly_mono.h  trajectory_base.h  trajectory_generator.cpp  trajectory_generator.h  trajectory_generator_waypoint.cpp  trajectory_generator_waypoint.h
time_optimizer/mosek8_1/: mosek64_8_1.lib  mosekscopt8_1.lib
v-rep/remoteApi/common/: luaFunctionData.cpp  luaFunctionDataItem.cpp  scriptFunctionData.cpp  scriptFunctionDataItem.cpp  shared_memory.c  simLib.cpp  socketInConnection.cpp  socketOutConnection.cpp
v-rep/remoteApi/common/stack/: stackArray.cpp  stackBool.cpp  stackMap.cpp  stackNull.cpp  stackNumber.cpp  stackObject.cpp  stackString.cpp
v-rep/remoteApi/include/: luaFunctionData.h  luaFunctionDataItem.h  scriptFunctionData.h  scriptFunctionDataItem.h  shared_memory.h  simConst.h  simLib.h  simTypes.h  socketInConnection.h  socketOutConnection.h
v-rep/remoteApi/include/stack/: stackArray.h  stackBool.h  stackMap.h  stackNull.h  stackNumber.h  stackObject.h  stackString.h
v-rep/remoteApi/libPlugin/simPlusPlus/: Handle.h  Plugin.cpp  Plugin.h
v-rep/remoteApi/libPlugin/simStubsGen/cpp/: stubs.cpp  stubs.h
v-rep/remoteApi/remoteApi/: extApi.c  extApi.h  extApiInternal.h  extApiPlatform.c  extApiPlatform.h
widgets/: adcmap.cpp  adcmap.h  aspectimglabel.cpp  aspectimglabel.h  batterycalculator.cpp  batterycalculator.h  detectallfocdialog.cpp  detectallfocdialog.h  detectbldc.cpp  detectbldc.h  detectfoc.cpp  detectfoc.h  detectfocencoder.cpp  detectfocencoder.h  detectfochall.cpp  detectfochall.h  dirsetup.cpp  dirsetup.h  displaybar.cpp  displaybar.h  displaypercentage.cpp  displaypercentage.h  helpdialog.cpp  helpdialog.h  historylineedit.cpp  historylineedit.h  imagewidget.cpp  imagewidget.h  mrichtextedit.cpp  mrichtextedit.h  mtextedit.cpp  mtextedit.h  nrfpair.cpp  nrfpair.h  pagelistitem.cpp  pagelistitem.h  paramdialog.cpp  paramdialog.h  parameditbool.cpp  parameditbool.h  (+22 more)
